<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.foodanywhere.view.nation.NationListFragment"
        android:label="@string/menu_country"
        tools:layout="@layout/fragment_nation_list" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.foodanywhere.view.user.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_manageCook"
        android:name="com.example.foodanywhere.view.manage.ManageApplicantFragment"
        android:label="@string/menu_managecook"
        tools:layout="@layout/fragment_managecook" />
    <fragment
        android:id="@+id/nav_manageCuisine"
        android:name="com.example.foodanywhere.view.manage.ManageCuisineFragment"
        android:label="@string/menu_managecuisine"
        tools:layout="@layout/fragment_mannagecuisine" />

    <fragment
        android:id="@+id/nav_applyCook"
        android:name="com.example.foodanywhere.view.apply.ApplicantApplyFragment"
        android:label="@string/menu_applyCook" />
    <fragment
        android:id="@+id/nav_applyCuisine"
        android:name="com.example.foodanywhere.view.apply.CuisineApplyFragment"
        android:label="@string/menu_applyCuisine" />

    <fragment
        android:id="@+id/nav_recommendR"
        android:name="com.example.foodanywhere.view.recommend.RecommendRFragment"
        android:label="@string/menu_applyCuisine" />
</navigation>