<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="userInfo"
            type="com.example.foodanywhere.datatype.UserInfo" />
        <variable
            name="userLogic"
            type="com.example.foodanywhere.businesslogic.UserLogic" />
    </data>

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding">


        <EditText
            android:id="@+id/login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_id"
            android:text = "@={userInfo.userId}"
            android:padding="@dimen/padding" />

        <EditText
            android:id="@+id/login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pass"
            android:text="@={userInfo.userPassword}"
            android:padding="@dimen/padding" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{(view)->userLogic.onLoginClick(userInfo)}"
            android:text="@string/login" />

        <Button
            android:id="@+id/button_enter_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->userLogic.onViewRegisterClick()}"
            android:text="@string/register" />

    </LinearLayout>
</layout>