<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="applicant"
            type="com.example.foodanywhere.datatype.Applicant" />

        <variable
            name="applyLogic"
            type="com.example.foodanywhere.businesslogic.ApplyLogic" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/image_add_applicant"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/button_load_applicant_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_load_applicant_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="136dp"
            android:text="@string/load_image"
            android:onClick="@{_ -> applyLogic.applicantLoadImageClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_add_applicant"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/text_add_applicant"
            android:layout_width="415dp"
            android:layout_height="317dp"
            android:layout_marginTop="16dp"
            android:gravity="top|start"
            android:hint="@string/description_cuisine"
            android:text="@={applicant.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_add_applicant" />

        <Button
            android:id="@+id/button_cuisine_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{_ -> applyLogic.onApplicantDoneClick(applicant)}"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>